tests/golden/type_errors/generic_method_explicit_non_generic.cd
struct Box { value: number }
impl Box {
  fun getValue(): number { return this.value; }
}
let box: Box = Box { value: 1 };
box.getValue<number>();
