tests/golden/type_errors/generic_method_explicit_non_generic.err
Type error at 6:22: function is not generic
  box.getValue<number>();
                       ^
